Add GET Ecosystems endpoint (#370)
* Add GET Ecosystems endpoint

* Ecosystem CRUD on project create/update
