# domain/src/main/java/onlydust/com/marketplace/api/domain/model/UpdateProjectCommand.java
@@ -20,4 +20,5 @@ public class UpdateProjectCommand {
     Boolean isLookingForContributors;
     String imageUrl;
     ProjectRewardSettings rewardSettings;
+    List<UUID> ecosystemIds;
 }
