# domain/src/main/java/onlydust/com/marketplace/api/domain/port/output/EcosystemStorage.java
@@ -1,0 +1,8 @@
+package onlydust.com.marketplace.api.domain.port.output;
+
+import onlydust.com.marketplace.api.domain.model.Ecosystem;
+import onlydust.com.marketplace.kernel.pagination.Page;
+
+public interface EcosystemStorage {
+    Page<Ecosystem> findAll(int pageIndex, int pageSize);
+}
